<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gamenews="http://schemas.android.com/apk/res/com.yy.android.sportbrush"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_bg_dark"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome_channel_label"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_title_left_mark"
        android:drawablePadding="14dp"
        android:gravity="left|center"
        android:text="@string/welcom_select_channel"
        android:textColor="@color/global_white"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/welcome_channel_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/welcome_channel_label"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:divider="@null"
        android:scrollbars="@null" />

    <LinearLayout
        android:id="@+id/welcome_channel_submit_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#e51d1a1a"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/welcome_channel_submit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@drawable/my_login_btn_selector"
            android:text="@string/welcom_submit_channel"
            android:textColor="@color/global_white"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/welcome_channel_hint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/welcome_channel_hint"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="#ff1d1a1a"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/welcom_hint_0"
            android:textColor="#ffffffff"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>